2022-10-12T16:16:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3236242507 # 523
* notice: last 14d: unq all: 33 5638
* notice: prev accum: outdated-unq outdated-all / unq all: 1098 71029 / 1157 76692
* notice: next accum: outdated-unq outdated-all / unq all: 1098 71029 / 1157 76667
* notice: prev exec diff / last date diff / accum: unq all: +0 +118 -0 -143 / +6 +262 -0 -0 / 6 262
* notice: removed / changed dates: [] / [2022-09-28 2022-10-12]

2022-10-12T08:08:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233053940 # 522
* notice: last 14d: unq all: 33 5663
* notice: prev accum: outdated-unq outdated-all / unq all: 1098 71029 / 1152 76729
* notice: next accum: outdated-unq outdated-all / unq all: 1098 71029 / 1157 76692
* notice: prev exec diff / last date diff / accum: unq all: +6 +144 -1 -181 / +6 +144 -0 -0 / 6 144
* notice: removed / changed dates: [] / [2022-09-28 2022-10-12]

2022-10-12T00:50:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3231244038 # 521
* notice: last 14d: unq all: 30 5700
* notice: prev accum: outdated-unq outdated-all / unq all: 1096 70625 / 1125 76200
* notice: next accum: outdated-unq outdated-all / unq all: 1098 71029 / 1152 76729
* notice: prev exec diff / last date diff / accum: unq all: +27 +205 -0 -15 / +29 +462 -0 -0 / 29 462
* notice: removed / changed dates: [2022-09-27] / [2022-09-28 2022-10-11]

2022-10-11T16:11:47Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3228459819
* notice: last 14d: unq all: 4 5575
* notice: prev accum: outdated-unq outdated-all / unq all: 1096 70625 / 1125 76226
* notice: next accum: outdated-unq outdated-all / unq all: 1096 70625 / 1125 76200
* notice: prev exec diff / last date diff / accum: unq all: +0 +119 -0 -145 / +2 +257 -0 -0 / 2 257