@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-30T00:58:45Z",
-  "count" : 404,
+  "timestamp" : "2022-10-13T00:41:49Z",
+  "count" : 392,
   "count_minmax" : [ 134, 404 ],
-  "count_decinc" : [ -0, +404 ],
+  "count_decinc" : [ -12, +404 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
