@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-12T16:16:14Z",
-  "count" : 262,
-  "count_minmax" : [ 144, 262 ],
-  "count_decinc" : [ -0, +262 ],
+  "timestamp" : "2022-10-13T00:41:49Z",
+  "count" : 409,
+  "count_minmax" : [ 144, 409 ],
+  "count_decinc" : [ -0, +409 ],
   "uniques" : 6,
   "uniques_minmax" : [ 6, 6 ],
   "uniques_decinc" : [ -0, +6 ]
