@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-12T16:16:14Z",
-  "count_outdated" : 71029,
-  "uniques_outdated" : 1098,
-  "count" : 76667,
-  "uniques" : 1157,
+  "timestamp" : "2022-10-13T00:41:49Z",
+  "count_outdated" : 71434,
+  "uniques_outdated" : 1101,
+  "count" : 77141,
+  "uniques" : 1158,
   "clones" : [
     {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 66,
-      "count_minmax": [ 66, 405 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
-    },
-    {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 404,
+      "count": 392,
       "count_minmax": [ 134, 404 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 262,
-      "count_minmax": [ 144, 262 ],
+      "count": 409,
+      "count_minmax": [ 144, 409 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
     }
