@@ -1,15 +1,10 @@
 {
-  "count": 5638,
+  "count": 5707,
   "uniques": 33,
   "clones": [
     {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 66,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 404,
+      "count": 392,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 262,
+      "count": 409,
       "uniques": 6
     }
   ]
