@@ -1,3 +1,11 @@
+2022-10-13T00:41:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3238875279 # 524
+* notice: last 14d: unq all: 33 5707
+* notice: prev accum: outdated-unq outdated-all / unq all: 1098 71029 / 1157 76667
+* notice: next accum: outdated-unq outdated-all / unq all: 1101 71434 / 1158 77141
+* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -12 / +6 +409 -0 -0 / 6 409
+* notice: removed / changed dates: [2022-09-28] / [2022-09-29 2022-10-12]
+
 2022-10-12T16:16:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3236242507 # 523
 * notice: last 14d: unq all: 33 5638
